Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: Qt Creator 4.7.0-beta1
-
Fix Version/s: Qt Creator 4.7.0
-
Component/s: Quick Designer
-
Labels:
-
Environment:macOS 10.13.4
Description
Open the tests/manual/qml/testfiles_quick2/testfiles_quick2.qmlproject project, change to design mode and double click the .qmlproject file in the projects view. Watch Qt Creator crash:
Process: Qt Creator [670] Path: /Users/USER/*/Qt Creator.app/Contents/MacOS/Qt Creator Identifier: org.qt-project.qtcreator Version: 4.6 (4.6.82) Code Type: X86-64 (Native) Parent Process: ??? [1] Responsible: Qt Creator [670] User ID: 501 Date/Time: 2018-05-28 10:25:46.831 +0200 OS Version: Mac OS X 10.13.4 (17E199) Report Version: 12 Anonymous UUID: 32D8816C-6B38-9E70-4425-217D7CC0201B Time Awake Since Boot: 3300 seconds System Integrity Protection: enabled Crashed Thread: 0 Dispatch queue: com.apple.main-thread Exception Type: EXC_BAD_ACCESS (SIGSEGV) Exception Codes: KERN_INVALID_ADDRESS at 0x0000000000000018 Exception Note: EXC_CORPSE_NOTIFY Termination Signal: Segmentation fault: 11 Termination Reason: Namespace SIGNAL, Code 0xb Terminating Process: exc handler [0] VM Regions Near 0x18: --> __TEXT 0000000101df9000-0000000101e0c000 [ 76K] r-x/rwx SM=COW M [/Users/ulf/Applications/Qt Creator 4.7.0-beta1/Qt Creator.app/Contents/MacOS/Qt Creator] Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 libQmlDesigner.dylib 0x00000001111021e4 QmlDesigner::DesignDocument::currentModel() const + 4 1 libQmlDesigner.dylib 0x00000001110b1aa7 QmlDesigner::ViewManager::attachViewsExceptRewriterAndComponetView() + 1111 2 libQmlDesigner.dylib 0x0000000110f6615e QmlDesigner::QmlDesignerPlugin::activateAutoSynchronization() + 254 3 libQmlDesigner.dylib 0x0000000110f66392 QmlDesigner::QmlDesignerPlugin::changeEditor() + 242 4 libQmlDesigner.dylib 0x0000000110f68232 QtPrivate::QFunctorSlotObject<QmlDesigner::QmlDesignerPlugin::integrateIntoQtCreator(QWidget*)::$_0, 1, QtPrivate::List<Core::IEditor*>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) + 98 5 org.qt-project.QtCore 0x0000000102e6502b QMetaObject::activate(QObject*, int, int, void**) + 2347 6 libCore.dylib 0x0000000109616bbd Core::EditorManager::currentEditorChanged(Core::IEditor*) + 61 7 libCore.dylib 0x00000001094d851f Core::Internal::EditorManagerPrivate::setCurrentEditor(Core::IEditor*, bool) + 479 8 libCore.dylib 0x00000001094d1ccd Core::Internal::EditorManagerPrivate::activateEditor(Core::Internal::EditorView*, Core::IEditor*, QFlags<Core::EditorManager::OpenEditorFlag>) + 61 9 libCore.dylib 0x00000001094d0d8a Core::Internal::EditorManagerPrivate::openEditor(Core::Internal::EditorView*, QString const&, Core::Id, QFlags<Core::EditorManager::OpenEditorFlag>, bool*) + 4042 10 libProjectExplorer.dylib 0x0000000109e88579 ProjectExplorer::Internal::ProjectTreeWidget::openItem(QModelIndex const&) + 73 11 org.qt-project.QtCore 0x0000000102e6502b QMetaObject::activate(QObject*, int, int, void**) + 2347 12 org.qt-project.QtWidgets 0x0000000102924b07 QAbstractItemView::activated(QModelIndex const&) + 55 13 org.qt-project.QtWidgets 0x00000001029929d5 QTreeView::mouseDoubleClickEvent(QMouseEvent*) + 933 14 org.qt-project.QtWidgets 0x00000001026f7108 QWidget::event(QEvent*) + 520 15 org.qt-project.QtWidgets 0x00000001027a07cd QFrame::event(QEvent*) + 45 16 org.qt-project.QtWidgets 0x00000001027aa869 QAbstractScrollArea::viewportEvent(QEvent*) + 57 17 org.qt-project.QtWidgets 0x00000001029234fe QAbstractItemView::viewportEvent(QEvent*) + 1502 18 org.qt-project.QtWidgets 0x000000010298f135 QTreeView::viewportEvent(QEvent*) + 517 19 org.qt-project.QtWidgets 0x00000001027ab524 0x1026ad000 + 1041700 20 org.qt-project.QtCore 0x0000000102e34322 QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) + 210 21 org.qt-project.QtWidgets 0x00000001026bcecd QApplicationPrivate::notify_helper(QObject*, QEvent*) + 285 22 org.qt-project.QtWidgets 0x00000001026bfc7d QApplication::notify(QObject*, QEvent*) + 7165 23 org.qt-project.QtCore 0x0000000102e3403f QCoreApplication::notifyInternal2(QObject*, QEvent*) + 159 24 org.qt-project.QtWidgets 0x00000001026bd810 QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) + 896 25 org.qt-project.QtWidgets 0x0000000102717210 0x1026ad000 + 434704 26 org.qt-project.QtWidgets 0x0000000102715f00 0x1026ad000 + 429824 27 org.qt-project.QtWidgets 0x00000001026bcee2 QApplicationPrivate::notify_helper(QObject*, QEvent*) + 306 28 org.qt-project.QtWidgets 0x00000001026be1ff QApplication::notify(QObject*, QEvent*) + 383 29 org.qt-project.QtCore 0x0000000102e3403f QCoreApplication::notifyInternal2(QObject*, QEvent*) + 159 30 org.qt-project.QtGui 0x00000001020ddf9b QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) + 5099 31 org.qt-project.QtGui 0x00000001020c34db QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 155 32 libqcocoa.dylib 0x00000001061b32c1 0x106188000 + 176833 33 com.apple.CoreFoundation 0x00007fff2d14ad81 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 17 34 com.apple.CoreFoundation 0x00007fff2d20265c __CFRunLoopDoSource0 + 108 35 com.apple.CoreFoundation 0x00007fff2d12dd30 __CFRunLoopDoSources0 + 208 36 com.apple.CoreFoundation 0x00007fff2d12d1ad __CFRunLoopRun + 1293 37 com.apple.CoreFoundation 0x00007fff2d12ca07 CFRunLoopRunSpecific + 487 38 com.apple.HIToolbox 0x00007fff2c40ad96 RunCurrentEventLoopInMode + 286 39 com.apple.HIToolbox 0x00007fff2c40aa0f ReceiveNextEventCommon + 366 40 com.apple.HIToolbox 0x00007fff2c40a884 _BlockUntilNextEventMatchingListInModeWithFilter + 64 41 com.apple.AppKit 0x00007fff2a6bda73 _DPSNextEvent + 2085 42 com.apple.AppKit 0x00007fff2ae53e34 -[NSApplication(NSEvent) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] + 3044 43 com.apple.AppKit 0x00007fff2a6b2885 -[NSApplication run] + 764 44 libqcocoa.dylib 0x00000001061b20bd 0x106188000 + 172221 45 org.qt-project.QtCore 0x0000000102e2fb92 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 418 46 org.qt-project.QtCore 0x0000000102e34752 QCoreApplication::exec() + 402 47 org.qt-project.qtcreator 0x0000000101e0487a main + 15882 48 libdyld.dylib 0x00007fff554e4015 start + 1 Thread 1:: com.apple.CFSocket.private 0 libsystem_kernel.dylib 0x00007fff55634cfa __select + 10 1 com.apple.CoreFoundation 0x00007fff2d167aeb __CFSocketManager + 635 2 libsystem_pthread.dylib 0x00007fff557fc661 _pthread_body + 340 3 libsystem_pthread.dylib 0x00007fff557fc50d _pthread_start + 377 4 libsystem_pthread.dylib 0x00007fff557fbbf9 thread_start + 13 Thread 2:: Qt bearer thread 0 libsystem_kernel.dylib 0x00007fff556360a2 poll + 10 1 org.qt-project.QtCore 0x0000000102e887d0 qt_safe_poll(pollfd*, unsigned int, timespec const*) + 112 2 org.qt-project.QtCore 0x0000000102e8a009 QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 857 3 org.qt-project.QtCore 0x0000000102e2fb92 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 418 4 org.qt-project.QtCore 0x0000000102c7a101 QThread::exec() + 113 5 org.qt-project.QtCore 0x0000000102c83657 0x102c56000 + 185943 6 libsystem_pthread.dylib 0x00007fff557fc661 _pthread_body + 340 7 libsystem_pthread.dylib 0x00007fff557fc50d _pthread_start + 377 8 libsystem_pthread.dylib 0x00007fff557fbbf9 thread_start + 13 Thread 3:: QThread 0 libsystem_kernel.dylib 0x00007fff556360a2 poll + 10 1 org.qt-project.QtCore 0x0000000102e88980 qt_safe_poll(pollfd*, unsigned int, timespec const*) + 544 2 org.qt-project.QtCore 0x0000000102e8a009 QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 857 3 org.qt-project.QtCore 0x0000000102e2fb92 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 418 4 org.qt-project.QtCore 0x0000000102c7a101 QThread::exec() + 113 5 org.qt-project.QtCore 0x0000000102c83657 0x102c56000 + 185943 6 libsystem_pthread.dylib 0x00007fff557fc661 _pthread_body + 340 7 libsystem_pthread.dylib 0x00007fff557fc50d _pthread_start + 377 8 libsystem_pthread.dylib 0x00007fff557fbbf9 thread_start + 13 Thread 4:: QThread 0 libsystem_kernel.dylib 0x00007fff556360a2 poll + 10 1 org.qt-project.QtCore 0x0000000102e88980 qt_safe_poll(pollfd*, unsigned int, timespec const*) + 544 2 org.qt-project.QtCore 0x0000000102e8a009 QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 857 3 org.qt-project.QtCore 0x0000000102e2fb92 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 418 4 org.qt-project.QtCore 0x0000000102c7a101 QThread::exec() + 113 5 org.qt-project.QtCore 0x0000000102c83657 0x102c56000 + 185943 6 libsystem_pthread.dylib 0x00007fff557fc661 _pthread_body + 340 7 libsystem_pthread.dylib 0x00007fff557fc50d _pthread_start + 377 8 libsystem_pthread.dylib 0x00007fff557fbbf9 thread_start + 13 Thread 5:: QQmlThread 0 libsystem_kernel.dylib 0x00007fff556360a2 poll + 10 1 org.qt-project.QtCore 0x0000000102e88980 qt_safe_poll(pollfd*, unsigned int, timespec const*) + 544 2 org.qt-project.QtCore 0x0000000102e8a009 QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 857 3 org.qt-project.QtCore 0x0000000102e2fb92 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 418 4 org.qt-project.QtCore 0x0000000102c7a101 QThread::exec() + 113 5 org.qt-project.QtQml 0x000000010358f039 0x10335e000 + 2297913 6 org.qt-project.QtCore 0x0000000102c83657 0x102c56000 + 185943 7 libsystem_pthread.dylib 0x00007fff557fc661 _pthread_body + 340 8 libsystem_pthread.dylib 0x00007fff557fc50d _pthread_start + 377 9 libsystem_pthread.dylib 0x00007fff557fbbf9 thread_start + 13 Thread 6:: QQmlThread 0 libsystem_kernel.dylib 0x00007fff556360a2 poll + 10 1 org.qt-project.QtCore 0x0000000102e88980 qt_safe_poll(pollfd*, unsigned int, timespec const*) + 544 2 org.qt-project.QtCore 0x0000000102e8a009 QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 857 3 org.qt-project.QtCore 0x0000000102e2fb92 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 418 4 org.qt-project.QtCore 0x0000000102c7a101 QThread::exec() + 113 5 org.qt-project.QtQml 0x000000010358f039 0x10335e000 + 2297913 6 org.qt-project.QtCore 0x0000000102c83657 0x102c56000 + 185943 7 libsystem_pthread.dylib 0x00007fff557fc661 _pthread_body + 340 8 libsystem_pthread.dylib 0x00007fff557fc50d _pthread_start + 377 9 libsystem_pthread.dylib 0x00007fff557fbbf9 thread_start + 13 Thread 7:: com.apple.NSEventThread 0 libsystem_kernel.dylib 0x00007fff5562b20a mach_msg_trap + 10 1 libsystem_kernel.dylib 0x00007fff5562a724 mach_msg + 60 2 com.apple.CoreFoundation 0x00007fff2d12e045 __CFRunLoopServiceMachPort + 341 3 com.apple.CoreFoundation 0x00007fff2d12d397 __CFRunLoopRun + 1783 4 com.apple.CoreFoundation 0x00007fff2d12ca07 CFRunLoopRunSpecific + 487 5 com.apple.AppKit 0x00007fff2a7fafc4 _NSEventThread + 184 6 libsystem_pthread.dylib 0x00007fff557fc661 _pthread_body + 340 7 libsystem_pthread.dylib 0x00007fff557fc50d _pthread_start + 377 8 libsystem_pthread.dylib 0x00007fff557fbbf9 thread_start + 13 Thread 8:: QmlJSEditor::Internal::SemanticInfoUpdater 0 libsystem_kernel.dylib 0x00007fff55634a1e __psynch_cvwait + 10 1 libsystem_pthread.dylib 0x00007fff557fd589 _pthread_cond_wait + 732 2 org.qt-project.QtCore 0x0000000102c84c7b 0x102c56000 + 191611 3 org.qt-project.QtCore 0x0000000102c84c12 QWaitCondition::wait(QMutex*, unsigned long) + 162 4 libQmlJSEditor.dylib 0x0000000110e4b982 QmlJSEditor::Internal::SemanticInfoUpdater::run() + 162 5 org.qt-project.QtCore 0x0000000102c83657 0x102c56000 + 185943 6 libsystem_pthread.dylib 0x00007fff557fc661 _pthread_body + 340 7 libsystem_pthread.dylib 0x00007fff557fc50d _pthread_start + 377 8 libsystem_pthread.dylib 0x00007fff557fbbf9 thread_start + 13 Thread 9:: QFileInfoGatherer 0 libsystem_kernel.dylib 0x00007fff55634a1e __psynch_cvwait + 10 1 libsystem_pthread.dylib 0x00007fff557fd589 _pthread_cond_wait + 732 2 org.qt-project.QtCore 0x0000000102c84c7b 0x102c56000 + 191611 3 org.qt-project.QtCore 0x0000000102c84c12 QWaitCondition::wait(QMutex*, unsigned long) + 162 4 org.qt-project.QtWidgets 0x00000001028e5bd2 0x1026ad000 + 2329554 5 org.qt-project.QtCore 0x0000000102c83657 0x102c56000 + 185943 6 libsystem_pthread.dylib 0x00007fff557fc661 _pthread_body + 340 7 libsystem_pthread.dylib 0x00007fff557fc50d _pthread_start + 377 8 libsystem_pthread.dylib 0x00007fff557fbbf9 thread_start + 13 Thread 10:: QQmlThread 0 libsystem_kernel.dylib 0x00007fff556360a2 poll + 10 1 org.qt-project.QtCore 0x0000000102e88980 qt_safe_poll(pollfd*, unsigned int, timespec const*) + 544 2 org.qt-project.QtCore 0x0000000102e8a009 QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 857 3 org.qt-project.QtCore 0x0000000102e2fb92 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 418 4 org.qt-project.QtCore 0x0000000102c7a101 QThread::exec() + 113 5 org.qt-project.QtQml 0x000000010358f039 0x10335e000 + 2297913 6 org.qt-project.QtCore 0x0000000102c83657 0x102c56000 + 185943 7 libsystem_pthread.dylib 0x00007fff557fc661 _pthread_body + 340 8 libsystem_pthread.dylib 0x00007fff557fc50d _pthread_start + 377 9 libsystem_pthread.dylib 0x00007fff557fbbf9 thread_start + 13 Thread 11:: QFileInfoGatherer 0 libsystem_kernel.dylib 0x00007fff55634a1e __psynch_cvwait + 10 1 libsystem_pthread.dylib 0x00007fff557fd589 _pthread_cond_wait + 732 2 org.qt-project.QtCore 0x0000000102c84c7b 0x102c56000 + 191611 3 org.qt-project.QtCore 0x0000000102c84c12 QWaitCondition::wait(QMutex*, unsigned long) + 162 4 org.qt-project.QtWidgets 0x00000001028e5bd2 0x1026ad000 + 2329554 5 org.qt-project.QtCore 0x0000000102c83657 0x102c56000 + 185943 6 libsystem_pthread.dylib 0x00007fff557fc661 _pthread_body + 340 7 libsystem_pthread.dylib 0x00007fff557fc50d _pthread_start + 377 8 libsystem_pthread.dylib 0x00007fff557fbbf9 thread_start + 13 Thread 12:: QQmlThread 0 libsystem_kernel.dylib 0x00007fff556360a2 poll + 10 1 org.qt-project.QtCore 0x0000000102e88980 qt_safe_poll(pollfd*, unsigned int, timespec const*) + 544 2 org.qt-project.QtCore 0x0000000102e8a009 QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 857 3 org.qt-project.QtCore 0x0000000102e2fb92 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 418 4 org.qt-project.QtCore 0x0000000102c7a101 QThread::exec() + 113 5 org.qt-project.QtQml 0x000000010358f039 0x10335e000 + 2297913 6 org.qt-project.QtCore 0x0000000102c83657 0x102c56000 + 185943 7 libsystem_pthread.dylib 0x00007fff557fc661 _pthread_body + 340 8 libsystem_pthread.dylib 0x00007fff557fc50d _pthread_start + 377 9 libsystem_pthread.dylib 0x00007fff557fbbf9 thread_start + 13 Thread 13:: QQmlThread 0 libsystem_kernel.dylib 0x00007fff556360a2 poll + 10 1 org.qt-project.QtCore 0x0000000102e88980 qt_safe_poll(pollfd*, unsigned int, timespec const*) + 544 2 org.qt-project.QtCore 0x0000000102e8a009 QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 857 3 org.qt-project.QtCore 0x0000000102e2fb92 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 418 4 org.qt-project.QtCore 0x0000000102c7a101 QThread::exec() + 113 5 org.qt-project.QtQml 0x000000010358f039 0x10335e000 + 2297913 6 org.qt-project.QtCore 0x0000000102c83657 0x102c56000 + 185943 7 libsystem_pthread.dylib 0x00007fff557fc661 _pthread_body + 340 8 libsystem_pthread.dylib 0x00007fff557fc50d _pthread_start + 377 9 libsystem_pthread.dylib 0x00007fff557fbbf9 thread_start + 13 Thread 14:: QQmlThread 0 libsystem_kernel.dylib 0x00007fff556360a2 poll + 10 1 org.qt-project.QtCore 0x0000000102e88980 qt_safe_poll(pollfd*, unsigned int, timespec const*) + 544 2 org.qt-project.QtCore 0x0000000102e8a009 QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 857 3 org.qt-project.QtCore 0x0000000102e2fb92 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 418 4 org.qt-project.QtCore 0x0000000102c7a101 QThread::exec() + 113 5 org.qt-project.QtQml 0x000000010358f039 0x10335e000 + 2297913 6 org.qt-project.QtCore 0x0000000102c83657 0x102c56000 + 185943 7 libsystem_pthread.dylib 0x00007fff557fc661 _pthread_body + 340 8 libsystem_pthread.dylib 0x00007fff557fc50d _pthread_start + 377 9 libsystem_pthread.dylib 0x00007fff557fbbf9 thread_start + 13 Thread 15:: QQmlThread 0 libsystem_kernel.dylib 0x00007fff556360a2 poll + 10 1 org.qt-project.QtCore 0x0000000102e88980 qt_safe_poll(pollfd*, unsigned int, timespec const*) + 544 2 org.qt-project.QtCore 0x0000000102e8a009 QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 857 3 org.qt-project.QtCore 0x0000000102e2fb92 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 418 4 org.qt-project.QtCore 0x0000000102c7a101 QThread::exec() + 113 5 org.qt-project.QtQml 0x000000010358f039 0x10335e000 + 2297913 6 org.qt-project.QtCore 0x0000000102c83657 0x102c56000 + 185943 7 libsystem_pthread.dylib 0x00007fff557fc661 _pthread_body + 340 8 libsystem_pthread.dylib 0x00007fff557fc50d _pthread_start + 377 9 libsystem_pthread.dylib 0x00007fff557fbbf9 thread_start + 13 Thread 16: 0 libsystem_pthread.dylib 0x00007fff557fbbdc start_wqthread + 0 1 ??? 0x0000400000000000 0 + 70368744177664 Thread 17: 0 libsystem_pthread.dylib 0x00007fff557fbbdc start_wqthread + 0 1 ??? 0x41c05dfa456398bf 0 + 4737890137481124031 Thread 18:: QmlJSEditor::Internal::SemanticInfoUpdater 0 libsystem_kernel.dylib 0x00007fff55634a1e __psynch_cvwait + 10 1 libsystem_pthread.dylib 0x00007fff557fd589 _pthread_cond_wait + 732 2 org.qt-project.QtCore 0x0000000102c84c7b 0x102c56000 + 191611 3 org.qt-project.QtCore 0x0000000102c84c12 QWaitCondition::wait(QMutex*, unsigned long) + 162 4 libQmlJSEditor.dylib 0x0000000110e4b982 QmlJSEditor::Internal::SemanticInfoUpdater::run() + 162 5 org.qt-project.QtCore 0x0000000102c83657 0x102c56000 + 185943 6 libsystem_pthread.dylib 0x00007fff557fc661 _pthread_body + 340 7 libsystem_pthread.dylib 0x00007fff557fc50d _pthread_start + 377 8 libsystem_pthread.dylib 0x00007fff557fbbf9 thread_start + 13 Thread 19: 0 libsystem_pthread.dylib 0x00007fff557fbbdc start_wqthread + 0 1 ??? 0x0000400000000000 0 + 70368744177664 Thread 0 crashed with X86 Thread State (64-bit): rax: 0x0000000000000000 rbx: 0x00007ffce8d95000 rcx: 0x0000000000000000 rdx: 0x00000000ffffffff rdi: 0x0000000000000000 rsi: 0x000163a6484f498f rbp: 0x00007ffeede036d0 rsp: 0x00007ffeede036d0 r8: 0x0000000000001aa2 r9: 0x0000000000000059 r10: 0x000000000025f8fa r11: 0x0000000000001aa2 r12: 0x0000000000000000 r13: 0x000000010316fd28 r14: 0x0000000000000000 r15: 0x00007ffcef696200 rip: 0x00000001111021e4 rfl: 0x0000000000010246 cr2: 0x0000000000000018 Logical CPU: 2 Error Code: 0x00000004 Trap Number: 14 [...]
Attachments
For Gerrit Dashboard: QTCREATORBUG-20495 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
233858,2 | QmlDesigner: fix crash while only allow QmlQtQuick2/UI | 4.7 | qt-creator/qt-creator | Status: ABANDONED | -1 | 0 |
234031,2 | QmlDesigner: Fix crash when opening qmlproject while Design mode is open | 4.7 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |