src/plugins/qmldesigner/qmldesignerplugin.cpp
@@ -198,15 +198,15 @@ bool QmlDesignerPlugin::delayedInitialize()
     d->viewManager.registerFormEditorToolTakingOwnership(new QmlDesigner::TextTool);
     d->viewManager.registerFormEditorToolTakingOwnership(new QmlDesigner::PathTool);
 
-    connect(Core::DesignMode::instance(), &Core::DesignMode::actionsUpdated,
-        &d->shortCutManager, &ShortCutManager::updateActions);
-
     return true;
 }
 
 void QmlDesignerPlugin::extensionsInitialized()
 {
-    integrateIntoQtCreator(&d->mainWidget);
+    // delay after Core plugin's extensionsInitialized, so the DesignMode is availabe
+    connect(Core::ICore::instance(), &Core::ICore::coreAboutToOpen, this, [this] {
+        integrateIntoQtCreator(&d->mainWidget);
+    });
 }
 
 static QStringList allUiQmlFilesforCurrentProject(const Utils::FileName &fileName)
@@ -254,6 +254,9 @@ void QmlDesignerPlugin::integrateIntoQtCreator(QWidget *modeWidget)
                                     QmlJSTools::Constants::QMLUI_MIMETYPE };
 
     Core::DesignMode::registerDesignWidget(modeWidget, mimeTypes, d->context->context());
+
+    connect(Core::DesignMode::instance(), &Core::DesignMode::actionsUpdated,
+        &d->shortCutManager, &ShortCutManager::updateActions);
 
     connect(Core::EditorManager::instance(), &Core::EditorManager::currentEditorChanged, [this] (Core::IEditor *editor) {
         if (d && checkIfEditorIsQtQuick(editor) && isInDesignerMode())
